# stripe-integration-fastapi

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
static/: error_session.html  success.html
