[tool.poetry]
name = "smart-trash"
version = "0.1.0"
description = ""
authors = ["Artiom Bell"]

[tool.poetry.dependencies]
python = "^3.9"
stripe = "^2.60.0"
Flask = "^2.0.1"
jsonify = "^0.5"
aiofiles = "^0.7.0"
fastapi-sessions = {extras = ["fastapi_sessions"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
